[imad-console] Updates ui/articele-one.html

--- a/ui/articele-one.html
+++ b/ui/articele-one.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <c href ='/'>home</c>
+            <a href ='/'>home</a>
         </div>
         <hr/>
         <h3>SHIN CHAN</h3>
