[imad-console] Updates ui/articele-one.html

--- a/ui/articele-one.html
+++ b/ui/articele-one.html
@@ -15,7 +15,7 @@
             feb 11 2017
         </div>
         <div>
-            <img src="ABAC.png" alt="shin chan" style="width:304px;height:228px;">
+            <img src="ABAC.png" alt="shin" style="width:304px;height:228px;">
 
         <p>
             This website is about Shin Chan
