[imad-console] Updates ui/articele-one.html

--- a/ui/articele-one.html
+++ b/ui/articele-one.html
@@ -15,7 +15,7 @@
             feb 11 2017
         </div>
         <div class="medium">
-            <img src="/ui/shin%20chan.jpg" class="img-medium"/>
+            <img src="imad-app-v2/ui/Shin%20Chan.jpg" class="img-medium"/>
         </div>
         <div>
       
