--- a/ui/articele-one.html
+++ b/ui/articele-one.html
@@ -3,7 +3,7 @@
         <title>
             SHIN CHAN
         </title>
-        
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
