--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,7 +2,7 @@
     
     <head>
         <title>
-            SHIN CHAN
+            SHIN CHAN 3
         </title>
          <link href="/ui/style.css" rel="stylesheet" />
     </head>
@@ -11,7 +11,7 @@
             <a href ='/'>home</a>
         </div>
         <hr/>
-        <h3>SHIN CHAN</h3>
+        <h3>SHIN CHAN 3</h3>
         <div>
             feb 11 2017
         </div>
