[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,8 +5,17 @@
             SHIN CHAN
         </title>
          <link href="/ui/style.css" rel="stylesheet" />
+         <meta name=viewport content="WIDTH=device-width initial=scale=1" />
+         <style>
+             .container{
+                 max-width = 800px;
+                 margin=0 auto;
+                 COLOR= RED;
+             }
+         </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href ='/'>home</a>
         </div>
@@ -38,7 +47,7 @@
             Shin Chan is a tv cartoon show telecasted in hungama mostly on sundays
         
         </p>
-        
+    </div>    
         </div>
     </body>
 </html>
