[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,9 +8,9 @@
          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
          <style>
              .container{
-                 max-width = 800px;
-                 margin=0 auto;
-                 COLOR= RED;
+                 max-width: 800px;
+                 margin: 0 auto;
+                 COLOR: RED;
              }
          </style>
     </head>
