[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -11,6 +11,7 @@
                  max-width: 800px;
                  margin: 0 auto;
                  COLOR: RED;
+                 font-family: times new roman;
              }
          </style>
     </head>
