[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,8 +10,11 @@
              .container{
                  max-width: 800px;
                  margin: 0 auto;
-                 COLOR: RED;
-                 font-family: times new roman;
+                 COLOR: #820d96;
+    font-family: cursive;
+    padding-top: 50px;
+    padding-right: 20px;
+    padding-left: 20px
              }
          </style>
     </head>
