[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,15 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <div>
+            <a href ='/'>article-one</a>
+        </div>
+        <div>
+            <a href ='/'>article-two</a>
+        </div>
+        <div>
+            <a href ='/'>article-three</a>
+        </div>
         <br>
         <div class="center text-big bold">
             Hi! I am raji and this is my first webapp!!
