[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,13 +8,13 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <div>
-            <a href ='/'>article-one</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>article-one</a>
         </div>
         <div>
-            <a href ='/'>article-two</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>article-two</a>
         </div>
         <div>
-            <a href ='/'>article-three</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>article-three</a>
         </div>
         <br>
         <div class="center text-big bold">
