[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,15 +11,18 @@
         <div class="center text-big bold">
             Hi! I am raji and this is my first webapp!!
         </div>
-           <div>
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>article-one</a>
+           <div class="centre">
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>ARTICLE ONE</a>
         </div>
-        <div>
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>article-two</a>
+        <hr/>
+        <div class="centre">
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>ARTICLE TWO</a>
         </div>
-        <div>
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>article-three</a>
+        <hr/>
+        <div class="cntre">
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>ARTICLE THREE</a>
         </div>
+        <hr/>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
