[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,13 +3,20 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
+    <style>
+        .color{
+            color:violet;
+        }
+    </style>
     <body>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
+        <div class="clor">
         <div class="center text-big bold">
             Hi! I am raji and this is my first webapp!!
+        </div>
         </div>
            <div class="centre">
             <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>ARTICLE ONE</a>
