--- a/ui/index.html
+++ b/ui/index.html
@@ -3,8 +3,8 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
          <style>
-        .color{
-            color:violet;
+        .color {
+            color:#820d96 ;
         }
     </style>
     </head>
