[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
          <style>
-        .color {
+        .clor {
             color:#820d96 ;
         }
     </style>
