--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -14,7 +14,8 @@
     font-family: cursive;
     padding-top: 50px;
     padding-right: 20px;
-    padding-left: 20px
+    padding-left: 20px;
+     background-color:black;
              }
          </style>
     </head>
