--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -19,7 +19,8 @@
              }
          </style>
     </head>
-    <body>
+    <body class= "background-color:black">
+        
         <div class="container">
             <div>
             <a href ='/'>home</a>
