--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,6 +5,7 @@
         <title>
             SHIN CHAN 3
         </title>
+        <link href="/ui/styles.css" rel="stylesheet" />
          
          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
          <style>
