--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
         <title>
             SHIN CHAN
         </title>
+        <link href="/ui/styles.css" rel="stylesheet" />
          
          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
          <style>
