[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,7 +4,7 @@
         <title>
             SHIN CHAN 2
         </title>
-          
+          <link href="/ui/styles.css" rel="stylesheet" />
          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
          <style>
              .container{
