[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
          <style>
         .clor {
             color:#820d96 ;
