[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -35,10 +35,13 @@
             telecasted in three different languages 
         
         </p>
+        <div>
           <a href='https://www.youtube.com/watch?v=F-P8LWWgyXM'>shin chan in tamil</a>
-         <a href='https://www.youtube.com/watch?v=UVFYHI55hFs'>shin chan in tamil</a>
-          <a href='https://www.youtube.com/watch?v=NH64LqhU9LE'>shin chan in tamil</a>
-        
+        </div>
+        <div>  <a href='https://www.youtube.com/watch?v=UVFYHI55hFs'>shin chan in tamil</a>
+        </div>  
+        <div> <a href='https://www.youtube.com/watch?v=NH64LqhU9LE'>shin chan in tamil</a>
+        </div>
          <p>
         enjoy watching!
         </p>
