[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -38,9 +38,9 @@
         <div>
           <a href='https://www.youtube.com/watch?v=F-P8LWWgyXM'>shin chan in tamil</a>
         </div>
-        <div>  <a href='https://www.youtube.com/watch?v=UVFYHI55hFs'>shin chan in tamil</a>
+        <div>  <a href='https://www.youtube.com/watch?v=UVFYHI55hFs'>shin chan in english</a>
         </div>  
-        <div> <a href='https://www.youtube.com/watch?v=NH64LqhU9LE'>shin chan in tamil</a>
+        <div> <a href='https://www.youtube.com/watch?v=NH64LqhU9LE'>shin chan in hindi</a>
         </div>
          <p>
         enjoy watching!
