[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -41,11 +41,11 @@ In its original run, Hanna and Barbera produced 114 Tom and Jerry shorts for Met
             <p> telecasted in three diff languages</p>
         </div>
         <div>
-          <a href='https://www.youtube.com/results?search_query=tom+and+jerry+tamil'>shin chan in tamil</a>
+          <a href='https://www.youtube.com/results?search_query=tom+and+jerry+tamil'>tom and jerry  in tamil</a>
         </div>
-        <div>  <a href='https://www.youtube.com/results?search_query=tom+and+jerry+english'>shin chan in english</a>
+        <div>  <a href='https://www.youtube.com/results?search_query=tom+and+jerry+english'>tom and jerry in english</a>
         </div>  
-        <div> <a href='https://www.youtube.com/results?search_query=tom+and+jerry++hindi'>shin chan in hindi</a>
+        <div> <a href='https://www.youtube.com/results?search_query=tom+and+jerry++hindi'>tom and jerry in hindi</a>
         </div>
          <p>
         enjoy watching!
