[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,7 +3,7 @@
     
     <head>
         <title>
-            SHIN CHAN 3
+            TOM AND JERRY
         </title>
         <link href="/ui/styles.css" rel="stylesheet" />
          
@@ -16,7 +16,7 @@
             <a href ='/'>home</a>
         </div>
         <hr/>
-        <h3></h3>
+        <h3>TOM AND JERRY</h3>
         <div>
             feb 11 2017
         </div>
