[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,15 +22,15 @@
         </div>
         <hr/>
            <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>ARTICLE ONE</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>SHIN CHAN</a>
         </div>
         <hr/>
         <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>ARTICLE TWO</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>MAKE WAY FOR NODDY</a>
         </div>
         <hr/>
         <div class="cntre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>ARTICLE THREE</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>TOM AND JERRY</a>
         </div>
         <hr/>
         <script type="text/javascript" src="/ui/main.js">
