[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,7 @@
         <div class="clor">
         <div class="center text-big bold">
             Hi! I am raji and this is my first webapp!!
+            <div>list of cartoons!!!</div>
         </div>
         </div>
         <hr/>
