[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -20,7 +20,7 @@
             feb 11 2017
         </div>
         <div class="medium">
-            <img src="imad-app-v2/ui/Shin%20Chan.jpg" class="img-medium"/>
+            <img src="imad-app-v2/ui/shin_chan_anime_folder_icon_by_ryuichi93-d7qmznf.png" class="img-medium"/>
         </div>
         <div>
       
