[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -20,7 +20,7 @@
             feb 11 2017
         </div>
         <div class="medium">
-            <img src="imad-app-v2/ui/Shin%20Chan.jpg" class="img-medium"/>
+            <img src="/ui/make-way-for-noddy.png" class="img-medium"/>
         </div>
           <div>
         <p>
