--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -21,7 +21,7 @@
             feb 11 2017
         </div>
         <div class="medium">
-            <img src="imad-app-v2/ui/Shin%20Chan.jpg" class="img-medium"/>
+            <img src="/ui/Tom-And-Jerry.png" class="img-medium"/>
         </div>
     <div>
         <p>
