--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -14,6 +14,13 @@
         <div class="container">
             <div>
             <a href ='/'>home</a>
+              <br>
+              <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>SHIN CHAN</a>
+              <br>
+               <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>MAKE WAY FOR NODDY</a>
+               <br>
+                 <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>TOM AND JERRY</a>
+            
         </div>
         <hr/>
         <h3>TOM AND JERRY</h3>
