[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -13,6 +13,13 @@
         <div class="container">
             <div>
             <a href ='/'>home</a>
+              <br>
+              <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>SHIN CHAN</a>
+              <br>
+               <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>MAKE WAY FOR NODDY</a>
+               <br>
+                 <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>TOM AND JERRY</a>
+            
         </div>
         <hr/>
         <h3>MAKE WAY FOR NODDY</h3>
