[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,15 +23,15 @@
         </div>
         <hr/>
            <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'>SHIN CHAN</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'><button>SHIN CHAN</button></a>
         </div>
         <hr/>
         <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'>MAKE WAY FOR NODDY</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'><button>MAKE WAY FOR NODDY</button></a>
         </div>
         <hr/>
         <div class="cntre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'>TOM AND JERRY</a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button>TOM AND JERRY</button></a>
         </div>
         <hr/>
         <script type="text/javascript" src="/ui/main.js">
