[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,21 +17,21 @@
         <br>
         <div class="clor">
         <div class="center text-big bold">
-            Hi! I am raji and this is my first webapp!!
+            Get Links To All Your Fvourite Cartoons!!
             <div>list of cartoons!!!</div>
         </div>
         </div>
         <hr/>
            <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'><button>SHIN CHAN</button></a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-one'><button class="btn">SHIN CHAN</button></a>
         </div>
         <hr/>
         <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'><button>MAKE WAY FOR NODDY</button></a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-two'><button class="btn">MAKE WAY FOR NODDY</button></a>
         </div>
         <hr/>
         <div class="cntre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button>TOM AND JERRY</button></a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button calss="btn">TOM AND JERRY</button></a>
         </div>
         <hr/>
         <script type="text/javascript" src="/ui/main.js">
