[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
             <a href ='http://rajikarnan.imad.hasura-app.io/article-two'><button class="btn">MAKE WAY FOR NODDY</button></a>
         </div>
         <hr/>
-        <div class="cntre">
+        <div class="centre">
             <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button calss="btn">TOM AND JERRY</button></a>
         </div>
         <hr/>
