[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
         </div>
         <hr/>
         <div class="centre">
-            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button calss="btn">TOM AND JERRY</button></a>
+            <a href ='http://rajikarnan.imad.hasura-app.io/article-three'><button class="btn">TOM AND JERRY</button></a>
         </div>
         <hr/>
         <script type="text/javascript" src="/ui/main.js">
