[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,8 @@
      
     </head>
     <body>
-        <div class="container">
+      <div  style= "background-image: URL ("shin_chan_anime_folder_icon_by_ryuichi93-d7qmznf.png");">
+        <div class="container" style="opacity: 1 ;">
         <div>
             
          <a href ='/'><button class="btn">HOME</button></a>
@@ -56,6 +57,7 @@
         enjoy watching!
         </p>
     </div>    
+        </div>
         </div>
     </body>
 </html>
