[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
          
          <meta name=viewport content="WIDTH=device-width initial=scale=1" />
      <style>
-         background-image: "URL ("shin_chan_anime_folder_icon_by_ryuichi93-d7qmznf.png");"
+         background-image : URL("shin_chan_anime_folder_icon_by_ryuichi93-d7qmznf.png");
      </style>
     </head>
     <body>
